# Kitsu

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users_table.py  0002_create_anime_table.py  0003_create_releases_and_episodes_tables.py  0004_create_favorites_table.py  0005_create_refresh_tokens_table.py  0006_add_avatar_to_users.py  0007_create_watch_progress_table.py  0008_align_collection_view_fks_to_uuid.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  errors.py  main.py
backend/app/api/: router.py  routes.py
backend/app/application/: __init__.py  auth_rate_limit.py  repositories.py
backend/app/auth/: __init__.py  enforcement_matrix.py  helpers.py  rbac.py
backend/app/background/: __init__.py  runner.py
backend/app/crud/: anime.py  base.py  collection.py  episode.py  favorite.py  providers.py  refresh_token.py  release.py  repositories.py  user.py  view.py  watch_progress.py
backend/app/domain/: __init__.py  entities.py  errors.py
backend/app/errors/: __init__.py  application.py  domain.py  security.py  (+1 more)
backend/tests/: __init__.py  test_architecture.py  test_auth_rate_limit.py  test_background_jobs.py  test_config_parsing.py  test_cors_and_config.py  test_error_contract.py  test_parser_layer.py  test_player_resolver.py  test_proxy_errors.py  test_rbac_enforcement.py  test_token_inspection.py
(+178 files in other folders)
